Bug 246641 - Unreviewed, fix JSWebAssemblyStruct's wrong construction
Summary: Unreviewed, fix JSWebAssemblyStruct's wrong construction
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: JavaScriptCore (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Yusuke Suzuki
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2022-10-17 11:40 PDT by Yusuke Suzuki
Modified: 2022-10-17 14:38 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Yusuke Suzuki 2022-10-17 11:40:31 PDT
...
Comment 1 Radar WebKit Bug Importer 2022-10-17 11:40:57 PDT
<rdar://problem/101256379>
Comment 2 Yusuke Suzuki 2022-10-17 11:42:07 PDT
Pull request: https://github.com/WebKit/WebKit/pull/5453
Comment 3 EWS 2022-10-17 14:38:43 PDT
Committed 255654@main (8231224aa257): <https://commits.webkit.org/255654@main>

Reviewed commits have been landed. Closing PR #5453 and removing active labels.